# LHW

./: .env.example  .gitignore  next.config.mjs  next.config.ts  package-lock.json  package.json
public/desktop-updates/: latest.json
scripts/: debug-map-embedded.mjs  debug-map-nav.mjs  debug-map.mjs  export-desktop-app.mjs  generate-app-icon.mjs  mac-install-guide.txt  seed-profile.ts  sync-app-version.mjs
sidebar-layout/: index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.updater/: private.key.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: set-desktop-window-shape.toml
src-tauri/src/: lib.rs  macos_window.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AssistantMessageBubble.tsx  AuthForm.tsx  Calculator.tsx  ChatArea.tsx  ChatRoom.jsx  DashboardLayout.jsx  DashboardLayout.tsx  DesktopOrbBall.module.css  DesktopOrbBall.tsx  DesktopPetSettings.tsx  DraggableGhost.tsx  FriendsPanel.jsx  GhostPet.tsx  GlobalFloatingPet.tsx  HomeLanding.tsx  LandingHero.tsx  LocaleProvider.tsx  Main.jsx  MapArea.tsx  MapAreaLoader.tsx  MessageNotificationProvider.jsx  Navbar.tsx  NicknameEditor.tsx  Notes.jsx  Notes.tsx  PetAssistant.tsx  PetDashboard.tsx  PetProvider.tsx  ProfilePanel.tsx  ScavengerCouponDrop.tsx  SettingsPanel.tsx  Sidebar.jsx  TauriDesktopInit.tsx  ThemeProvider.tsx  ThemeToggle.tsx  WeatherWidget.tsx
src/hooks/: useCyberScavenging.ts  useGeolocation.ts  useUsername.ts
src/lib/: app-version.generated.ts  app-version.ts  auth-client.ts  cyber-scavenging.ts  ui.ts  (+23 more)
(+60 files in other folders)
